devops/k8s/invoice-workflow-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-workflow-service
  namespace: devops-ssd-assignment
  labels:
    app: invoice-workflow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-workflow-service
  template:
    metadata:
      labels:
        app: invoice-workflow-service
    spec:
      containers:
        - name: app
          image: invoice-workflow-service:0df415edb507
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
