devops/k8s/invoice-workflow-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-workflow-service
  namespace: devops-ssd-assignment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: invoice.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: invoice-workflow-service
                port:
                  number: 80
